Agregando diseño y SASS a notebook

--- a/pages/aireAcondicionado.html
+++ b/pages/aireAcondicionado.html
@@ -88,7 +88,7 @@
                     </div>
 
                     <div>
-                        <iframe class="videoHeader" width="500" height="255" src="https://www.youtube.com/embed/2Nx4Pwl_0X8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe class="videoHeaderAire" width="500" height="255" src="https://www.youtube.com/embed/2Nx4Pwl_0X8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </section>
@@ -164,7 +164,6 @@
                         <div class="divfalla7">
 
                             <p class="pMarcas">Otro:</p>
-
                             <textarea class="textArea" type="comentario"  cols="30" rows="5" placeholder="Ingrese su falla aquí"></textarea>  
 
                         </div> 
