INDEX FULL RESPONSIVE con SASS

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <a href="./pages/aireAcondicionado.html">   
             <img class="imagenes" src="./public/image/aire acondicionado.png" alt="Foto Aire Acondicionado"></a>      
 
-            <p class="parrafoProducto">Aquí aprenderemos todos los componentes de un aire acondicionado tipo split, veremos las fallas mas comunes e intentaremos solucionar tu producto juntos!</p>
+            <p class="parrafoProducto">Tipo split (proximamente tipo piso techo)</p>
         </div>
     </section>
 
@@ -141,7 +141,7 @@
             <a href="./pages/pcDesktop.html">
             <img class="imagenes" src="./public/image/PC y sus componentes.png" alt="Foto Pc de escritorio"></a>
 
-            <p class="parrafoProducto">Aquí aprenderemos todos los componentes de una PC de escritorio, veremos las fallas mas comunes e intentaremos solucionar tu producto juntos!</p>
+            <p class="parrafoProducto">Hardware (proximamente software :D)</p>
         </div>
     </section>
 
@@ -153,7 +153,7 @@
             <a href="./pages/notebook.html">
             <img class="imagenes" src="./public/image/notebook.png" alt="Foto Notebook"></a>
 
-            <p class="parrafoProducto">Aquí aprenderemos todos los componentes de una Notebook, veremos las fallas mas comunes e intentaremos solucionar tu producto juntos!</p>
+            <p class="parrafoProducto">Hardware (proximamente software :D)</p>
         </div>
     </section>
 
