Agregando Maps mixins y extend

--- a/pages/notebook.html
+++ b/pages/notebook.html
@@ -79,7 +79,7 @@
 
             <section class="sectionHeaderNotebook">
 
-                <h2 class="tituloNotebook">Notebooks</h2>
+                <h2 class="titulo-notebook">Notebooks</h2>
     
                 
                 <div class="esquemaNotebook">
