--- a/pages/pcDesktop.html
+++ b/pages/pcDesktop.html
@@ -72,7 +72,7 @@
 
             <section class="sectionHeaderDesktop">
 
-                <h2 class="tituloDesktop">PC de escritorio</h2>
+                <h2 class="titulo-pcDesktop">PC de escritorio</h2>
     
                 
                 <div class="esquemaDesktop">
