--- a/pages/redesSociales.html
+++ b/pages/redesSociales.html
@@ -64,7 +64,7 @@
   <!--********************INICIO HEADER*********************-->
   <header>
 
-    <h2 class="tituloInfo">Información de "Tu Técnico" </h2>
+    <h2 class="titulo-redesSociales">Información de "Tu Técnico" </h2>
     
     <section class="container">
 
