--- a/pages/aireAcondicionado.html
+++ b/pages/aireAcondicionado.html
@@ -74,7 +74,7 @@
 
             <section class="sectionHeaderAire">
 
-                <h2 class="tituloAire">Aires Acondicionados</h2>
+                <h2 class="titulo-aireAcondicionado">Aires Acondicionados</h2>
     
                 
                 <div class="esquemaAire">
