pequeñas modificaciones al index y a la descripcion

--- a/pages/aireAcondicionado.html
+++ b/pages/aireAcondicionado.html
@@ -11,7 +11,7 @@
 
     <!--Description-->
 
-    <meta name="description" content="Hola soy Marcos Castillo, desarrollador web y tecnico en hardware. Soy el creador de TuTecnico. Mail de contacto: marcos_gabriel_cr@hotmail.com">
+    <meta name="description" content="Hola soy Marcos Castillo, desarrollador web y tecnico en hardware de PC y notebooks. Soy el creador de TuTecnico. Mail de contacto: marcos_gabriel_cr@hotmail.com">
     
     <!--Link a estilos boostrap-->
     
