--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Tu Tecnico, servicio tecnico, reparacion, Aire acondicionado, Notebook, pc, Desktop, contacto, ayuda, soluciones">
 
     <!--Description-->
-    <meta name="description" content="Hola soy Marcos Castillo, desarrollador web y tecnico en hardware. Soy el creador de TuTecnico. Mail de contacto: marcos_gabriel_cr@hotmail.com">
+    <meta name="description" content="Hola soy Marcos Castillo, desarrollador web y tecnico en hardware de PC y notebooks. Soy el creador de TuTecnico. Mail de contacto: marcos_gabriel_cr@hotmail.com">
     
     <!--Link a estilos boostrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -145,7 +145,7 @@
             <a href="./pages/pcDesktop.html">
             <img class="imagenes" src="./public/image/PC y sus componentes.png" alt="Foto Pc de escritorio"></a>
 
-            <p class="parrafoProducto">Hardware (proximamente software :D)</p>
+            <p class="parrafoProducto">Hardware (proximamente software)</p>
         </div>
     </section>
 
@@ -157,7 +157,7 @@
             <a href="./pages/notebook.html">
             <img class="imagenes" src="./public/image/notebook.png" alt="Foto Notebook"></a>
 
-            <p class="parrafoProducto">Hardware (proximamente software :D)</p>
+            <p class="parrafoProducto">Hardware (proximamente software)</p>
         </div>
     </section>
 
