Haciendo full responsive TODO el sitio

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <section class="sectionPresentacion">       
         <div>
-            <h1>Hola! yo soy Bob y soy tu técnico digital!</h1> 
+            <h1>Hola! soy Bob y soy tu técnico digital!</h1> 
         </div>
     </section>
 
