creando imagenes y mejorando organizacion de estas

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <h3 class="parrafoProducto">Aire Acondicionado</h3>
 
             <a href="./pages/aireAcondicionado.html">   
-            <img class="imagenes" src="./public/image/aire acondicionado.png" alt="Foto Aire Acondicionado"></a>      
+            <img class="imagenes" src="./public/image/aireAcondicionado/aire acondicionado.png" alt="Foto Aire Acondicionado"></a>      
 
             <p class="parrafoProducto">Tipo split (proximamente tipo piso techo)</p>
         </div>
@@ -143,7 +143,7 @@
             <h3 class="parrafoProducto">PC de escritorio</h3>
 
             <a href="./pages/pcDesktop.html">
-            <img class="imagenes" src="./public/image/PC y sus componentes.png" alt="Foto Pc de escritorio"></a>
+            <img class="imagenes" src="./public/image/pcDesktop/PC y sus componentes.png" alt="Foto Pc de escritorio"></a>
 
             <p class="parrafoProducto">Hardware (proximamente software)</p>
         </div>
@@ -155,7 +155,7 @@
             <h3 class="parrafoProducto">Notebook</h3>
 
             <a href="./pages/notebook.html">
-            <img class="imagenes" src="./public/image/notebook.png" alt="Foto Notebook"></a>
+            <img class="imagenes" src="./public/image/notebooks/notebook.png" alt="Foto Notebook"></a>
 
             <p class="parrafoProducto">Hardware (proximamente software)</p>
         </div>
@@ -209,10 +209,10 @@
      </section>
      <section class="footerEscritorio">
             <div class="redesSociales">
-                <a href="./index.html">Inicio</a>
+                <a href="./index.html"><img src="./public/image/home3.png" alt=""></a>
             </div>
             <div class="redesSociales">
-                <a href="./pages/redesSociales.html">Sobre nosotros</a>
+                <a href="./pages/redesSociales.html"><img src="./public/image/infoIco.png" alt=""></a>
             </div>
 
             <div class="redesSociales">
