--- a/pages/redesSociales.html
+++ b/pages/redesSociales.html
@@ -89,10 +89,10 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="../public/image/tecnicoArreglandoAire2.png" class="d-block w-100" alt="...">
+                  <img src="../public/image/aireAcondicionado/tecnicoArreglandoAire2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="../public/image/tecnicoArreglandoAire3.png" class="d-block w-100" alt="...">
+                  <img src="../public/image/aireAcondicionado/tecnicoArreglandoAire3.png" class="d-block w-100" alt="...">
                 </div> 
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -118,10 +118,10 @@
             <div id="carouselExampleControls1" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="../public/image/tecnicoArreglandoNotebook.png" class="d-block w-100" alt="...">
+                  <img src="../public/image/notebooks/tecnicoArreglandoNotebook.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="../public/image/tecnicoArreglandoNotebook2.png" class="d-block w-100" alt="...">
+                  <img src="../public/image/notebooks/tecnicoArreglandoNotebook2.png" class="d-block w-100" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev">
@@ -149,10 +149,10 @@
             <div id="carouselExampleControls2" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="../public/image/tecnicoArreglandoPc.png" class="d-block w-100" alt="...">
+                  <img src="../public/image/pcDesktop/tecnicoArreglandoPc.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="../public/image/tecnicoArreglandoPc2.png" class="d-block w-100" alt="...">
+                  <img src="../public/image/pcDesktop/tecnicoArreglandoPc2.png" class="d-block w-100" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls2" data-bs-slide="prev">
@@ -180,7 +180,7 @@
         <div id="carouselExampleControls3" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../public/image/arreglandoAireCasero.png" class="d-block w-100" alt="...">
+              <img src="../public/image/aireAcondicionado/arreglandoAireCasero.png" class="d-block w-100" alt="...">
             </div>
       
           </div>
@@ -244,11 +244,13 @@
   
        </section>
        <section class="footerEscritorio">
-              <div class="redesSociales">
-                  <a href="../index.html">Home</a>
+         
+                <div class="redesSociales">
+                  <a href="../index.html"><img src="../public/image/home3.png" alt="home"></a>
               </div>
+
               <div class="redesSociales">
-                  <a href="../pages/redesSociales.html">Sobre nosotros</a>
+                  <a href="../pages/redesSociales.html"><img src="../public/image/infoIco.png" alt=""></a>
               </div>
   
               <div class="redesSociales">
